# rust-gql-backend

./: .gitignore  Cargo.toml  README.md  README_ES.md  config.toml  schema.graphql
crates/api/: Cargo.toml
crates/api/src/: config.rs  db.rs  http.rs  lib.rs  loader.rs  main.rs
crates/api/src/auth/: mod.rs  session.rs
crates/api/src/graphql/: mod.rs  model.rs  mutation.rs  query.rs  scalar.rs  subscription.rs
crates/api/src/storage/: mod.rs  supabase.rs
scripts/: build-docs.sh  build-web.sh  xcheck.sh
xcheck/: Cargo.toml
xcheck/src/: main.rs
xtask/: Cargo.toml
xtask/src/: contract.rs  main.rs
