[workspace]
resolver = "3"
members = ["crates/api", "xtask", "xcheck"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

# Single source of truth for versions (latest stable as of 2026-07-08, crates.io).
[workspace.dependencies]
rust-gql-domain = { path = "../rust-gql-domain", features = ["graphql"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
axum = "0.8.9"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
sqlx = { version = "0.9.0", default-features = false, features = [
	"postgres",
	"runtime-tokio",
	"macros",
	"chrono",
] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
subtle = "2.6.1"
percent-encoding = "2.3.2"
async-trait = "0.1.89"
serde_json = "1.0.150"
reqwest = { version = "0.13.4", default-features = false, features = [
	"rustls",
] }
