[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "gql-api"
path = "src/main.rs"

[features]
# Auth strategy and subscription transport are orthogonal extension points
# (review §3.3): the default set is the one the existing Node SPA needs.
default = ["auth-session", "subs-sse", "storage-supabase"]
auth-session = ["dep:hmac", "dep:sha2", "dep:base64", "dep:subtle", "dep:percent-encoding"]
auth-jwt = ["dep:jsonwebtoken", "dep:argon2"]
auth-oidc = []
subs-sse = ["dep:serde_json"]
subs-ws = []
storage-supabase = ["dep:reqwest"]
storage-s3 = ["dep:aws-sdk-s3", "dep:aws-config"]

[dependencies]
rust-gql-domain = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true, features = ["dataloader"] }
async-graphql-axum = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
figment = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
percent-encoding = { workspace = true, optional = true }

jsonwebtoken = { version = "10.4.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
aws-sdk-s3 = { version = "1.137.0", optional = true }
aws-config = { version = "1.8.18", optional = true }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
